--- a/payment.html
+++ b/payment.html
@@ -72,6 +72,10 @@
 		.name{
 			font-size: 7vw;
 		}
+		.link{
+			font-size: 7vw;
+			font-weight: normal;
+		}
 		
 		.Transaction{
 			font-size:3vw;
@@ -115,7 +119,7 @@
 				</br>
 				<h2> OR </h2>
 				</br>
-				<a href = "upi://pay?pn=EuroSchool HSR&pa=s.muniraj009-1@okhdfcbank&cu=INR&am=" id ="link"><p>Click To Pay</p></a>
+				<a href = "upi://pay?pn=EuroSchool HSR&pa=s.muniraj009-1@okhdfcbank&cu=INR&am=" id ="link" class ="link"><p>Click To Pay</p></a>
 				
 					
 				</div>
